crates/daemon/tests/snapshots/cli_help__cli_help_todo_dismiss.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Not a to-do: kept as a correction and never shown again

Usage: mxr todo dismiss [OPTIONS] <TODO_ID>...

Arguments:
  <TODO_ID>...

Options:
      --dry-run
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
