crates/daemon/tests/snapshots/cli_help__cli_help_todo_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
The runway (the default), or every row in one state

Usage: mxr todo list [OPTIONS]

Options:
      --expired            The Expired list: rows past their window or let go. Undo restores one
      --state <STATE>      Every row in this state instead of the runway [possible values: open, done, dismissed, expired]
      --limit <LIMIT>      Rows to list with --expired or --state [default: 200]
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
