crates/daemon/tests/snapshots/cli_help__cli_help_todo_why.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Where each field of a to-do came from: schema.org, a pattern in the email, the lead-time table, a model, or you

Usage: mxr todo why [OPTIONS] <TODO_ID>

Arguments:
  <TODO_ID>

Options:
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
